<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ec.edu.unl.blockstudy.detailQuestionaire.ui.QuestionaireActivity">
    <item
        android:id="@+id/action_more_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/action_more_info"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:title="@string/upload_repository"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_questionnaire"
        app:showAsAction="always" />


</menu>
